--- a/index.html
+++ b/index.html
@@ -386,7 +386,10 @@ position:absolute;
 <div class="row hs">
 
             <div class="col-md-6 c c1"> -->	
-	
+			
+ <div class="row">
+ 
+	<div class="col-md-6 c c1">
    <div id="carousel" class="carousel slide" data-ride="carousel" style="display: inline-block;">
    
    
@@ -421,24 +424,18 @@ www.chapter1.ru</p>
         </div>
     </div>
    
-   
-	</div>		
+   </div>
+	
 			
-				
-			
-            	<!--h3><b>CHAPTER 1</b></h3><br/>
-<p>Bootstrap uses Autoprefixer to deal with CSS vendor prefixes. If you're compiling Bootstrap from its Less/Sass source and not using our Gruntfile, you'll need to integrate Autoprefixer into your build process yourself. If you're using precompiled Bootstrap or using our Gruntfile, you don't need to worry about this because Autoprefixer is already integrated into our Gruntfile.
-www.chapter1.ru</p>
-            </div-->
             <div class="col-md-3 c c2">
                 <p><img class="span2" src="img/sl5.png"></p>
            </div>
 		   <div class="col-md-3 c c3">
                 <p class="img"><img class="span2" src="img/sl6.png" height="195em"><img class="span2" src="img/sl4.png"></p>
            </div>
-      	</div> 
+      
 
-	
+	</div>
         <div class="row">
             <div class="col-md-3 hs2">
 			<div class="brd">
@@ -623,7 +620,7 @@ www.chapter1.ru</p>
 	</div>
 	
 	
-
+</div>
 	
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
